Created initial game logic.

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
             <div class="stats">
                 <div class="win-stats">
                     <h2>Wins</h2>
-                    <p>0</p>
+                    <p id="winText">0</p>
                 </div>
                 <div class="draw-stats">
                     <h2>Draws</h2>
-                    <p>0</p>
+                    <p id="drawText">0</p>
                 </div>
                 <div class="loss-stats">
                     <h2>Losses</h2>
-                    <p>0</p>
+                    <p id="lossText">0</p>
                 </div>
             </div>
         </main>
